# Spike

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  parse.py
.ci/: install_pugi.sh
.github/workflows/: cmake.yml
MAXex/: 3DSMaxSDKCompat.h  CompositeTex.h  Maps.h  MapsCore.h  Mix.h  MorpherV2.def  Morpherx64.def  Morpherx86.def  NodeSuffix.h  NormalBump.h  PhysicalMaterial.h  RGBMultiply.h  VertexColor.h  hk_preset.hpp
MAXex/win/: About.rc  AboutDlg.h  CFGMacros.h
_samples/: datas.cpp
classgen/: classgen.hpp  classgen.py
cmake/: 3dsmax.cmake  chartype.cmake  odr_test.cmake  pchtest.cmake  project.h.tmpl  spike.tmpl  targetex.cmake  verinfo.rc.tmpl  version.cmake
datas/: DirectoryScanner.hpp  MasterPrinter.cpp  Matrix33Simple.cpp  Matrix33Simple.hpp  Matrix44.cpp  Matrix44.hpp  MultiThread.hpp  SettingsManager.hpp  VectorsSimd.hpp  aabb.hpp  allocator_hybrid.hpp  app_context.hpp  base_128.hpp  bincore.hpp  bincore_fwd.hpp  binreader.hpp  binreader_ref.hpp  binreader_stream.hpp  binwritter.hpp  binwritter_ref.hpp  binwritter_stream.hpp  bitfield.hpp  blowfish.cpp  blowfish.h  blowfish2.h  crc32.cpp  crc32.hpp  deleter_hybrid.hpp  directory_scanner.cpp  directory_scanner.hpp  disabler.hpp  encryptor.hpp  endian.hpp  endian_fwd.hpp  esString.cpp  esstring.h  except.hpp  fileinfo.hpp  flags.hpp  float.hpp  (+40 more)
datas/encrypt/: blowfish.cpp  blowfish.h  blowfish2.h  encryptor.hpp  xorenc.hpp
datas/internal/: bincore.hpp  bincore_endian.hpp  bincore_file.hpp  bincore_navi.hpp  bitfield.inl  master_printer_ix.inl  master_printer_win.inl  reflector.inl  reflector_class.hpp  reflector_class_reg.hpp  reflector_enum.hpp  reflector_enum_reg.hpp  reflector_reg.hpp  reflector_type.hpp  sc_architecture.hpp  sc_type.hpp  stat_ix.inl  stat_win.inl  string_view.inl
datas/python/: matrix44.hpp  reflected_enum.hpp  vectors.hpp
doc/: ref_bwd.puml  rf_rel.puml
formats/: BlockDecoder.h  BlockDecoder.inl  BlockDecoderSimd.hpp  DDS.hpp  FWSE.hpp  GX2.cpp  GX2.hpp  MSF.hpp  VAG.hpp  WAVE.hpp  XVAG.hpp  ZIP.hpp  ZIP_istream.inl  ZIP_ostream.inl  addr_ps3.hpp
gltf/: CMakeLists.txt
gltf/include/: gltf.h  gltf.hpp
gltf/src/: fx_gltf.cpp  gltf.cpp
include/python/: matrix44.hpp  pythonex.hpp  reflected_enum.hpp  vectors.hpp
include/python/uni/: list.hpp  motion.hpp  rts.hpp  skeleton.hpp
include/spike/: app_context.hpp  classgen.hpp  except.hpp  gltf.hpp  gltf_attribute.hpp  master_printer.hpp
include/spike/app/: batch.hpp  cache.hpp  console.hpp  context.hpp  out_context.hpp  texel.hpp  tmp_storage.hpp
include/spike/crypto/: blowfish.h  blowfish2.h  crc32.hpp  encryptor.hpp  jenkinshash.hpp  jenkinshash3.hpp  xorenc.hpp
include/spike/format/: DDS.hpp  FWSE.hpp  MSF.hpp  VAG.hpp  WAVE.hpp  XVAG.hpp  ZIP.hpp  ZIP_istream.inl  ZIP_ostream.inl
include/spike/gltf/: gltf.h
include/spike/gpu/: BlockDecoder.h  BlockDecoder.inl  BlockDecoderSimd.hpp  addr_ps3.hpp
include/spike/io/: binreader.hpp  binreader_ref.hpp  binreader_stream.hpp  binwritter.hpp  binwritter_ref.hpp  directory_scanner.hpp  fileinfo.hpp  stat.hpp  vectors.hpp
include/spike/io/detail/: bincore.hpp  bincore_endian.hpp  bincore_file.hpp
include/spike/reflect/: array.hpp  reflector.hpp  reflector_fwd.hpp  reflector_io.hpp  reflector_xml.hpp
include/spike/reflect/detail/: reflector.inl  reflector_class.hpp  reflector_enum.hpp  reflector_type.hpp
include/spike/type/: base_128.hpp  bitfield.hpp  flags.hpp  float.hpp  matrix44.hpp  pointer.hpp  tchar.hpp  unicode.hpp  vectors.hpp  vectors_fwd.hpp  vectors_simd.hpp
include/spike/type/detail/: bitfield.inl  sc_type.hpp
include/spike/uni/: common.hpp  deleter_hybrid.hpp  format.hpp  model.hpp  motion.hpp  rts.hpp
include/spike/uni/detail/: exception.hpp  format_full.hpp  model.inl  motion.inl  skeleton.inl
include/spike/util/: aabb.hpp  endian.hpp  endian_fwd.hpp  macroLoop.hpp  pugi_fwd.hpp  pugiex.hpp  settings.hpp  supercore.hpp  unicode.hpp  unit_testing.hpp  vectors_string.hpp
include/spike/util/detail/: sc_architecture.hpp
spike/: CMakeLists.txt  batch.cpp  batch.hpp  cache.hpp  console.cpp  console.hpp  context.cpp  context.hpp  in_cache.cpp  in_context.cpp  out_cache.cpp  out_context.cpp  out_context.hpp  spike.cpp  tmp_storage.cpp  tmp_storage.hpp
src/: CMakeLists.txt  blowfish.cpp  crc32.cpp  directory_scanner.cpp  master_printer.cpp  matrix44.cpp  reflector.cpp  reflector_io.cpp  reflector_xml.cpp  stat.cpp  uni.cpp  uni_format.cpp  uni_python.cpp
src/app/: CMakeLists.txt  batch.cpp  bc7decomp.c  bc7decomp.h  context.cpp  in_cache.cpp  in_context.cpp  out_cache.cpp  out_context.cpp  pvr_decompress.cpp  qoi.h  texel.cpp  tmp_storage.cpp
src/cli/: CMakeLists.txt  console.cpp  spike.cpp
src/detail/: pymotion.inl  pyskeleton.inl  stat_ix.inl  stat_win.inl
src/gltf/: .clang-format  CMakeLists.txt  gltf.cpp  icosphere.hpp
src/gltf/fx/: fx_gltf.cpp
test/: CMakeLists.txt  allocator_hybrid.inl  base128.inl  bincore.inl  bitfield.inl  datas.cpp  disabler.inl  endian.inl  fileinfo.inl  flags.inl  float.inl  matrix44.inl  multi_thread.inl  reflector.inl  reflector_bindump.inl  reflector_decl.inl  reflector_decl_io.inl  reflector_def.inl  reflector_extended.inl  reflector_io.inl  supercore.inl  test.cpp  test_app.cpp  test_base.cpp  test_blowfish.cpp  test_reflector.cpp  test_uni.cpp  test_uni.py  test_unipy.cpp  test_xml.cpp  uni_format.inl  vector_simd.inl
test/shared/: CMakeLists.txt  class.cpp  shared.cpp
test/spike/: .gitignore  CMakeLists.txt  test_cache.cpp  test_texel.cpp
test/spike/compiled_resources/: CMakeLists.txt  resources.tar.zst
uni/: common.hpp  element.hpp  format.hpp  list.hpp  list_vector.hpp  model.hpp  motion.hpp  rts.hpp  skeleton.hpp  uni.cpp  uni_format.cpp  virtual_iterator.hpp
uni/internal/: format.inl  format_full.hpp  model.inl  motion.inl  skeleton.inl
uni/python/: pyenum.hpp  pylist.hpp  pymotion.hpp  pymotion.inl  pyrts.hpp  pyskeleton.hpp  pyskeleton.inl  uni_python.cpp
